--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
-    <link rel="icon" href="./assets/css/img/Music Player_50px.png" type="image" sizes="16x16">
+    <link rel="icon" href="./assets/css/img/icons8_music_48.png" type="image" sizes="16x16">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./responsive.css">
     <link rel="stylesheet" href="./assets/css/fonts/themify-icons-font/themify-icons/themify-icons.css">
